--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 	</head>
 	<body  class="main-container">
 			<header class="page-header">
-				<a href="#" class="logo">WebStudio</a>
+				<li class="webstudio">
+					<a href="#" class="logo">WebStudio</a>
+				</li>
 				<nav>
 					<ul class="menu">
 						<li class="item"><a href="estudio.html" class="link">Estudio</a></li>
@@ -108,7 +110,9 @@
 			</section>
 		</main>
 		<footer class="footer-theme">
-			<a href="#" class="logo"> WebStudio</a>
+			<li class="webstudio">
+				<a href="#" class="logo"> WebStudio</a>
+			</li>
 			<div>
 			<address class="contact-footer">
 				Calz. Ticomán 500, Ciudad de <br>
