--- a/portafolio.html
+++ b/portafolio.html
@@ -16,11 +16,13 @@
 	</head>
 	<body  class="main-container">
 			<header class="page-header">
-				<a href="#" class="logo">WebStudio</a>
+				<li class="webstudio">
+					<a href="index.html" class="logo"> WebStudio</a>
+				</li>
 				<nav>
 					<ul class="menu">
 						<li class="item"><a href="estudio.html" class="link">Estudio</a></li>
-						<li class="item"><a href="portafolio.html" class="link">Portafolio</a></li>
+						<li class="item"><a href="#" class="link">Portafolio</a></li>
 						<li class="item"><a href="contact.html" class="link">Contactos</a></li>
 					</ul>
 				</nav>
@@ -94,8 +96,9 @@
 			</section>
 		</main>
 			<footer class="footer-theme">
-				<a href="#" class="logo"> WebStudio</a>
-				<div>
+				<li class="webstudio">
+					<a href="index.html" class="logo"> WebStudio</a>
+				</li>
 				<address class="contact-footer">
 					Calz. Ticomán 500, Ciudad de <br>
 					México, CDMX, México<br>
